pushed out a media query from starting at 1200px to starting at 1350px - this is to stop text from being hidden on smaller laptop screens

--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@ a:visited {
   margin-top: -10px;
 }
 
-.nav-event-header {
+.nav-header {
   color: white;
   font-size: 20px;
 }
@@ -117,6 +117,21 @@ a:visited {
 .nav-events-li {
   margin: 15px 7px;
   cursor: pointer;
+}
+
+.nav-events-location {
+  font-size: 13px;
+  margin-top: -30px;
+}
+
+.nav-news {
+  border: solid white thin;
+  margin: 10px 25px;
+  padding: 0px 0px 15px 0px;
+}
+
+.nav-news-li {
+  font-size: 13px;
 }
 
 .hide-menu {
@@ -371,22 +386,31 @@ a:hover {
     overflow: visible;
     margin-left: -15px;
   }
+
 }
 
 @media only screen and (min-width : 992px) {
 
-  .nav-event-header {
+ /* .nav-header {
     font-size: 22px;
   }
 
   .nav-events-li {
     font-size: 18px;
   }
+
+  .nav-events-location {
+    font-size: 15px;
+  }
+
+  .nav-news-li {
+    font-size: 18px;
+  }*/
 }
 
-@media only screen and (min-width : 1200px) {
+@media only screen and (min-width : 1350px) {
 
-  .nav-ul-desktop {
+  /*.nav-ul-desktop {
   padding-bottom: 55px;
 }
 
@@ -396,6 +420,22 @@ a:hover {
 
   .nav-brand-img {
     margin: 4em auto;
+  }*/
+
+  .nav-header {
+    font-size: 22px;
+  }
+
+  .nav-events-li {
+    font-size: 18px;
+  }
+
+  .nav-events-location {
+    font-size: 15px;
+  }
+
+  .nav-news-li {
+    font-size: 18px;
   }
 
   .desktop-li {
